--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,19 +6,14 @@
   </div>
   <div class="right sm-width-full">
     <ul class="list-reset mt-lg-1 mb-2 mb-lg-1">
-        <li class="inline-block">
-          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="#1">
-            1. Select a Manifest
+       <li class="inline-block">
+          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="{{site.baseurl}}/">
+            Create Annotations
           </a>
         </li>
         <li class="inline-block">
-          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="#2">
-            2. Add Annotations
-          </a>
-        </li>
-        <li class="inline-block">
-          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="#3">
-            3. Store Annotations
+          <a class="align-middle link-primary mr-2 mr-lg-0 ml-lg-2" href="{{site.baseurl}}/annotations">
+            List of Annotations
           </a>
         </li>
     </ul>
