--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -3,7 +3,15 @@
 	{ manifestUri: '{{ site.url }}{{ site.baseurl }}/iiif/{{ m }}/manifest.json' }{% unless forloop.last %}, {% endunless %}
 {% endfor %}
 {% endcapture %}
-
+{% for annotation in site.annotations %}
+<script>
+  {% if annotation.id contains 'list' %}
+  {% assign ident = annotation.id | split: '/' %}
+  {% assign replace = annotation | replace: "'", "***"  %}
+  load_annotations('{{ident.last | replace: "-list", "list"}}', '{{replace}}')
+  {% endif %}
+</script>
+{% endfor %}
 <iframe title='Mirador' class="iiif_presentation" allowtransparency="true" src='iiif_mirador.html' allowfullscreen='true' webkitallowfullscreen='true' mozallowfullscreen='true' style='width: 100%; height: 600px;margin:40px 0px 20px 0px;' srcdoc="<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
 <style>#viewer {width: 100%;}</style>
 <div id='viewer'></div>
