--- a/_layouts/annotationlist.html
+++ b/_layouts/annotationlist.html
@@ -5,25 +5,29 @@ layout: page
 {% include head.html %}
 
 {% for annotation in site.annotations %}
-<table> <tbody>
-  <tr>
   	{% assign annoidsplit = annotation.id | split: '/'  %}
 {% assign annoid = annoidsplit.last %}
 {% capture url %}
 {{site.url}}{{site.baseurl}}{{annotation.id}}.json
 {% endcapture %}
+<div class="row">
  {% if annotation.id contains 'list' %}
-<td><iiif-annotation annotationlist="{{url | strip }}"></iiif-annotation></td>
-<td><button id="{{annoid}}_button" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
-<button id="{{annoid}}_edit" onclick="delete_items('{{annoid}}')">Delete</button>
-<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationlist="{{url| strip }}"&gt;&lt;iiif-annotation&gt;</div></td>
+<div class="column anno_left">
+	<iiif-annotation annotationlist="{{url | strip }}"></iiif-annotation>
+</div>
+<div class="column anno_right">
+	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
+	<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationlist="{{url| strip }}"&gt;&lt;iiif-annotation&gt;</div>
+	<button id="{{annoid}}_edit" class="listbutton" onclick="delete_items('{{annoid}}')">Delete</button>
+</div>
 </tr>
 {% else %}
-<td><iiif-annotation annotationurl="{{url | strip }}"></iiif-annotation></td>
-<td><button id="{{annoid}}_button" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
-	<button id="{{annoid}}_edit" onclick="delete_items('{{annoid}}')">Delete</button>
-<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;iiif-annotation&gt;</div></td>
-</tr>
+<div class="column anno_left"><iiif-annotation annotationurl="{{url | strip }}"></iiif-annotation></div>
+<div class="column anno_right">
+	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
+	<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;iiif-annotation&gt;</div>
+	<button id="{{annoid}}_edit" class="listbutton" onclick="delete_items('{{annoid}}')">Delete</button>
+</div>
 {% endif %}
-</tbody> </table> 
+</div> 
 {% endfor %}
