--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <script src="{{ '/assets/js/iiif-annotation.js' | prepend: site.baseurl }}"></script>
     <script src="{{ '/assets/js/local-functions.js' | prepend: site.baseurl }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-  <link rel="stylesheet" href="{{ '/assets/css/iiif-annotation.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/iiif-annotation.css' | prepend: full_base_url }}">
   <link rel="stylesheet" href="{{ "/assets/style.css" | prepend: full_base_url }}">
 
 
