--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -4,7 +4,8 @@
 
 {% endfor %}
 {% endcapture %}
-<iframe title='Mirador' class="iiif_presentation" allowtransparency="true" src='iiif_mirador.html' allowfullscreen='true' webkitallowfullscreen='true' mozallowfullscreen='true' style='width: 100%; height: 55em;margin:40px 0px 20px 0px;' srcdoc="<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
+<div id="container">
+<iframe title='Mirador' class="iiif_presentation" allowtransparency="true" src='iiif_mirador.html' allowfullscreen='true' webkitallowfullscreen='true' mozallowfullscreen='true' style='width: 98%; height: 55em;margin:40px 0px 20px 0px;' srcdoc="<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
 <style>#viewer {width: 100%;}</style>
 <div id='viewer'></div>
 
@@ -23,3 +24,5 @@
    });
 </script>">
 </iframe>
+<button type="button" id="anno_button">Load All Annotations</button>
+</div>
