--- a/assets/css/iiif-annotation.css
+++ b/assets/css/iiif-annotation.css
@@ -55,7 +55,7 @@ figcaption {
 }
 
 
-.tagging {
+.tagging, .tag {
   background: #92D1E8;
   border-radius: 3px 0 0 3px;
   color: black;
@@ -68,7 +68,7 @@ figcaption {
   text-decoration: none;
   -webkit-transition: color 0.2s;
 }
-.tagging::before {
+.tagging::before, .tag {
   background: #fff;
   border-radius: 10px;
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
@@ -80,7 +80,7 @@ figcaption {
   top: 10px;
 }
 
-.tagging::after {
+.tagging::after, .tag {
   background: #fff;
   border-bottom: 13px solid transparent;
   border-left: 10px solid #92D1E8;
@@ -89,4 +89,25 @@ figcaption {
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.inactive {
+  color: red;
+  pointer-events: none;
+}
+.nextButton {
+  font-size: 22px;
+}
+
+#storyboard_viewer {
+  padding-top: 50px;
+}
+#storyboard_viewer > div {
+  width: 60%;
+  display: inline-block;
+  height:600px;
+}
+#annotation {
+  width: 100%;
+  text-align: left;
 }
