--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 
   <title>{{ page.title }} - {{ site.title }}</title>
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
+  <lin rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <link rel="stylesheet" href="{{ "/assets/css/iiif-annotation.css" | absolute_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/iiif-server.css" | absolute_url }}">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
