--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -4,7 +4,7 @@
 
 {% endfor %}
 {% endcapture %}
-<div id="container">
+<div id="mirador_container">
 <iframe title='Mirador' class="iiif_presentation" allowtransparency="true" src='iiif_mirador.html' allowfullscreen='true' webkitallowfullscreen='true' mozallowfullscreen='true' style='width: 98%; height: 55em;margin:40px 0px 20px 0px;' srcdoc="<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
 <style>#viewer {width: 100%;}</style>
 <div id='viewer'></div>
