--- a/assets/css/iiif-annotation.css
+++ b/assets/css/iiif-annotation.css
@@ -145,16 +145,21 @@ figcaption {
   display: inline-block;
   height:600px;
 }
-#annotation.active {
-  width: 10%;
+#annotation {
+  width: 18%;
   border: 2px solid black;
   background: white;
   position: absolute;
   top: 60px;
-  display: inline-block;
+  z-index: 2;
   height: 250px;
   overflow: scroll;
   padding: 2px;
+  margin-left: 20px;
+  word-wrap: break-word;
+}
+
+#annotation_text {
   word-wrap: break-word;
 }
 
@@ -162,13 +167,6 @@ figcaption {
     width: 100%;
     height: 100%;
     object-fit: scale-down;
-}
-
-#annotation_text {
-  display: inline-block;
-}
-#annotation.inactive {
-  display: none;
 }
 
 .fullscreen {
@@ -194,4 +192,3 @@ display: none;
   float: left;
   padding-top: 5px;
   padding-left: 5px;
-}
