--- a/assets/css/iiif-annotation.css
+++ b/assets/css/iiif-annotation.css
@@ -147,6 +147,7 @@ figcaption {
 }
 #annotation {
   width: 18%;
+  resize: both;
   border: 2px solid black;
   background: white;
   position: absolute;
