--- a/assets/css/iiif-annotation.css
+++ b/assets/css/iiif-annotation.css
@@ -93,6 +93,7 @@ figcaption {
   top: 0;
 }
 
+
 .tag {
   background: #92D1E8;
   border-radius: 3px 0 0 3px;
@@ -132,7 +133,7 @@ figcaption {
   color: red;
   pointer-events: none;
 }
-.nextButton {
+.toolbarButton {
   font-size: 22px;
 }
 
@@ -141,19 +142,21 @@ figcaption {
 }
 
 .seadragonbox {
-  width: 60%;
+  width: 100%;
   display: inline-block;
   height:600px;
 }
 #annotation {
-  width: 18%;
+  width: 10%;
   resize: both;
   border: 2px solid black;
   background: white;
   position: absolute;
-  top: 60px;
+  top: 75px;
   z-index: 2;
-  height: 250px;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
   overflow: scroll;
   padding: 2px;
   margin-left: 20px;
@@ -162,6 +165,8 @@ figcaption {
 
 #annotation_text {
   word-wrap: break-word;
+  height: auto;
+  max-height: 450px;
 }
 
 #annotation_text img {
@@ -186,10 +191,33 @@ display: none;
   background:grey;
    opacity: .4;
 }
+
+.overlay {
+color: lightblue;
+font-size: 25px;
+}
 .close {
   display: none;
 }
 .close_button {
-  float: left;
   padding-top: 5px;
   padding-left: 5px;
+}
+
+.map-marker {
+position:absolute;
+bottom:0;
+left: calc(50% - 12.5px);
+}
+
+.fullscreen {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  border: 1px solid #000;
+}
