--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,11 @@
 
   <title>{{ page.title }} - {{ site.title }}</title>
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | absolute_url }}">
+  <link rel="stylesheet" href="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://unpkg.com/vue"></script>
   <script type="text/javascript" src="{{ "/assets/js/just-the-docs.js" | absolute_url }}"></script>
-  <script type="text/javascript" src="{{ "/assets/js/iiif-annotation.min.js" | absolute_url }}"></script>
+  <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.min.js"></script>
   <script type="text/javascript" src="{{ "/assets/js/local-functions.js" | absolute_url }}"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
