add copy to clipboard

--- a/_layouts/storyboard.html
+++ b/_layouts/storyboard.html
@@ -15,7 +15,13 @@ layout: page
 </div>
 <div class="column anno_right">
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
-	<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-storyboard annotationlist="{{url| strip }}"&gt;&lt;/iiif-storyboard&gt;</div>
+  <div id="{{annoid}}_embeditem" style="display: none;">
+    <textarea id="{{annoid}}_embedcode" rows="5">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</textarea>
+    <button onclick="copytoclipboard('{{annoid}}_embedcode')" onmouseout="outFunc('{{annoid}}_tooltip')" class="tooltip copybutton">
+    <span class="tooltiptext" id="{{annoid}}_tooltip">Copy to clipboard</span>
+      <i class="fas fa-copy"></i>
+    </button>
+  </div>
 </div>
 </div>
 {% endif %}
