--- a/_layouts/annotationlist.html
+++ b/_layouts/annotationlist.html
@@ -16,13 +16,25 @@ layout: page
 </div>
 <div class="column anno_right">
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
-	<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationlist="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</div>
+  <div id="{{annoid}}_embeditem" style="display: none;">
+    <textarea id="{{annoid}}_embedcode" rows="5">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</textarea>
+    <button onclick="copytoclipboard('{{annoid}}_embedcode')" onmouseout="outFunc('{{annoid}}_tooltip')" class="tooltip copybutton">
+    <span class="tooltiptext" id="{{annoid}}_tooltip">Copy to clipboard</span>
+      <i class="fas fa-copy"></i>
+    </button>
+  </div>
 </div>
 {% else %}
 <div class="column anno_left"><iiif-annotation annotationurl="{{url | strip }}"></iiif-annotation></div>
 <div class="column anno_right">
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
-	<div id="{{annoid}}_embedcode" style="display: none;">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</div>
+  <div id="{{annoid}}_embeditem" style="display: none;">
+    <textarea id="{{annoid}}_embedcode" rows="5">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</textarea>
+    <button onclick="copytoclipboard('{{annoid}}_embedcode')" onmouseout="outFunc('{{annoid}}_tooltip')" class="tooltip copybutton">
+    <span class="tooltiptext" id="{{annoid}}_tooltip">Copy to clipboard</span>
+      <i class="fas fa-copy"></i>
+    </button>
+  </div>
 </div>
 {% endif %}
 </div>
