--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
   <script src="https://unpkg.com/vue"></script>
   <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.min.js"></script>
   <script type="text/javascript" src="{{ "/assets/js/local-functions.js" | absolute_url }}"></script>
-
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
