--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | absolute_url }}">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script src="https://unpkg.com/vue"></script>
-  <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.min.js"></script>
+  <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.js"></script>
   <script type="text/javascript" src="{{ "/assets/js/local-functions.js" | absolute_url }}"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
