--- a/_layouts/storyboard.html
+++ b/_layouts/storyboard.html
@@ -16,7 +16,7 @@ layout: page
 <div class="column anno_right">
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
   <div id="{{annoid}}_embeditem" style="display: none;">
-    <textarea id="{{annoid}}_embedcode" rows="5">&lt;iiif-annotation annotationurl="{{url| strip }}"&gt;&lt;/iiif-annotation&gt;</textarea>
+    <textarea id="{{annoid}}_embedcode" rows="5">&lt;iiif-storyboard annotationlist="{{url| strip }}"&gt;&lt;/iiif-storyboard&gt;</textarea>
     <button onclick="copytoclipboard('{{annoid}}_embedcode')" onmouseout="outFunc('{{annoid}}_tooltip')" class="tooltip copybutton">
     <span class="tooltiptext" id="{{annoid}}_tooltip">Copy to clipboard</span>
       <i class="fas fa-copy"></i>
