--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -24,5 +24,5 @@
    });
 </script>">
 </iframe>
-<button type="button" id="anno_button">Load All Annotations</button>
+<button type="button" id="anno_button">Create/Update Annotations</button>
 </div>
