update css path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.js"></script>
 
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/iiifserver.css" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "/css/iiifserver.css" | absolute_url }}">
 
   {% if site.ga_tracking != nil %}
     <script>
