--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   <script type="text/javascript" src="{{ "/assets/js/local-functions.js" | absolute_url }}"></script>
   <script type="text/javascript" src="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
   <link rel="stylesheet" href="{{ "/assets/css/just-the-docs.css" | absolute_url }}">
   <link rel="stylesheet" href="{{ "/css/iiifserver.css" | absolute_url }}">
 
