--- a/css/iiifserver.css
+++ b/css/iiifserver.css
@@ -185,3 +185,13 @@ textarea {
   padding: 1px 2px;
   cursor: pointer;
 }
+
+@media only screen and (min-width: 46.25rem) {
+.side-bar {
+    width: 17%;
+    min-width: 0px;
+  }
+  .main-content {
+  	margin-left: calc(17%);
+  }
+}
