--- a/_includes/annotation_to_json.html
+++ b/_includes/annotation_to_json.html
@@ -51,7 +51,7 @@
       $("#anno_button").prop("disabled", true).css({"background-color": "grey"})
       $("body").prepend('<div id="overlay" style="width: 100%; height: 100%; opacity: .4;"><i class="fa fa-spinner fa-spin" style="text-align: center;vertical-align: center;position: fixed;top: 50%;left: 50%; opacity: 1; color: white; font-size: 200px;"></i></div>');
       $("#overlay").css({"background-color": "black","z-index": "9999999","position": "fixed"})
-        create_items('{{site.api_server}}')
+        create_items('{{site.api_server}}', '{{site.url}}{{site.baseurl}}')
       $(document).ajaxStop(function() {
             $("#overlay").remove()
             $("#anno_button").prop("disabled", false).removeAttr("style")
