--- a/css/iiifserver.css
+++ b/css/iiifserver.css
@@ -212,6 +212,10 @@ input, select, textarea{
   color: black;
 }
 
-*:not(.classname){
+* {
   box-sizing : content-box;
+}
+
+.all_results {
+  box-sizing: border-box;
 }
