--- a/css/iiifserver.css
+++ b/css/iiifserver.css
@@ -229,3 +229,8 @@ iiif-annotation * {
   height: 50px!important;
   width: auto!important;
 }
+
+.page-content a {
+	text-overflow: unset;
+	white-space: unset;
+}
