--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -9,7 +9,7 @@
 <style>#viewer {width: 100%;}</style>
 <div id='viewer'></div>
 
-<script src='{{ site.baseurl }}/build/mirador/mirador.js'></script>
+<script src='https://projectmirador.org/demo/mirador.min.js'></script>
 <script type='text/javascript'>
    $(function() {
      myMiradorInstance = Mirador({
