--- a/_includes/annotation_to_json.html
+++ b/_includes/annotation_to_json.html
@@ -1,7 +1,7 @@
 
 <div id="anno_results"></div>
 <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  src="//code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 <script type="text/jscript">
