--- a/_includes/embed.html
+++ b/_includes/embed.html
@@ -3,7 +3,7 @@
 	<{{include.tag}} {{include.type}}="{{url | strip }}"></{{include.tag}}>
 </div>
 <div class="column anno_right">
-  <a class="listbutton" target="_blank" href="https://peaceful-depths-13455.herokuapp.com/annoeditor/render_anno?annotationurl={{url}}&endpoint=https://limitless-plains-74009.herokuapp.com/write_annotation/">Edit</a>
+  <a class="listbutton" target="_blank" href="https://peaceful-depths-13455.herokuapp.com/annoeditor/render_anno?annotationurl={{url}}&endpoint={{site.endpoint}}">Edit</a>
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
   <div id="{{annoid}}_embeditem" style="display: none;">
     <textarea id="{{annoid}}_embedcode" rows="5">&lt;{{include.tag}} {{include.type}}="{{url| strip }}"&gt;&lt;/{{include.tag}}&gt;</textarea>
