--- a/_includes/embed.html
+++ b/_includes/embed.html
@@ -3,7 +3,12 @@
 	<{{include.tag}} {{include.type}}="{{url | strip }}"></{{include.tag}}>
 </div>
 <div class="column anno_right">
-  <a class="listbutton" target="_blank" href="https://peaceful-depths-13455.herokuapp.com/annoeditor/render_anno?annotationurl={{url}}&endpoint={{site.endpoint}}">Edit</a>
+	{% if include.type == 'rangeurl' %}
+	{% assign editorurl = "range_editor/render_range?rangeormanifest=range&objecturl=" %}
+	{% else %}
+	{% assign editorurl = "annoeditor/render_anno?annotationurl=" %}
+	{% endif %}
+  <a class="listbutton" target="_blank" href="https://peaceful-depths-13455.herokuapp.com/{{editorurl|strip}}{{url | strip}}&endpoint={{site.endpoint}}">Edit</a>
 	<button id="{{annoid}}_button" class="listbutton" onclick="make_embed_code('{{annoid}}')">Show embed code</button>
   <div id="{{annoid}}_embeditem" style="display: none;">
     <textarea id="{{annoid}}_embedcode" rows="5">&lt;{{include.tag}} {{include.type}}="{{url| strip }}"&gt;&lt;/{{include.tag}}&gt;</textarea>
