--- a/_includes/embed.html
+++ b/_includes/embed.html
@@ -4,7 +4,7 @@
 </div>
 <div class="column anno_right">
 	{% if include.type == 'rangeurl' %}
-	{% assign editorurl = "range_editor/render_range?rangeormanifest=range&objecturl=" %}
+	{% assign editorurl = "rangeditor/render_range?rangeormanifest=range&objecturl=" %}
 	{% else %}
 	{% assign editorurl = "annoeditor/render_anno?annotationurl=" %}
 	{% endif %}
