--- a/_includes/annotation_to_json.html
+++ b/_includes/annotation_to_json.html
@@ -1,10 +1,6 @@
 
 <div id="anno_results"></div>
-<script
-  src="//code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-<script type="text/jscript">
+<script type="text/javascript">
   $(document).ready(function(){
     localStorage.clear();
   	{% for annotation in site.annotations %}
