update endpoint, delete functions still need to be written

--- a/_includes/iiif_presentation.html
+++ b/_includes/iiif_presentation.html
@@ -4,22 +4,35 @@
 
 {% endfor %}
 {% endcapture %}
+<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
+
 <div id="mirador_container">
-<iframe title='Mirador' class="iiif_presentation" allowtransparency="true" src='iiif_mirador.html' allowfullscreen='true' webkitallowfullscreen='true' mozallowfullscreen='true' style='width: 98%; height: 55em;margin:40px 0px 20px 0px;' srcdoc="<link rel='stylesheet' type='text/css' href='{{ site.baseurl }}/build/mirador/css/mirador-combined.css'>
-<style>#viewer {width: 100%;}</style>
+<style>#viewer {width: 100%; height: 660px; position: relative;}</style>
 <div id='viewer'></div>
 
 <script src='//projectmirador.org/demo/mirador.min.js'></script>
+<script src='{{site.url}}{{site.baseurl}}/assets/js/annotationEndpoint.js'></script>
+
 <script type='text/javascript'>
+
+var annotations =
+{
+{% for anno in site.annotations %}
+'{{anno.slug}}' : {{anno | jsonify}}
+{% unless forloop.last %}, {% endunless %}
+{% endfor %}
+}
    $(function() {
-     myMiradorInstance = Mirador({
+     var api_server = '{{site.api_server}}'
+     var origin_url = '{{site.url}}{{site.baseurl}}'
+      myMiradorInstance = Mirador({
        id: 'viewer',
        data: [{{data}}],
        windowObjects: [{
            loadedManifest: '{{site.data.preloadedmanifests[0]}}',
            bottomPanelVisible: {{ page.bottom_panel | default: 'true' }}
        }],
-       annotationEndpoint: { 'name':'Local Storage', 'module': 'LocalStorageEndpoint' },
+       annotationEndpoint: { 'name':'Local Annotation Endpoint', 'module': 'LocalAnnotationEndpoint', 'options': {'server': api_server, 'allannotations' : annotations, 'origin_url': origin_url}},
 			 sidePanelOptions : {
            'tocTabAvailable': true,
            'layersTabAvailable': true,
@@ -27,7 +40,5 @@
          }
      });
    });
-</script>">
-</iframe>
-<button type="button" id="anno_button">Create/Update Annotations</button>
+</script>
 </div>
