--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,4 @@
   <script type="text/javascript" src="{{ "/assets/js/local-functions.js" | absolute_url }}"></script>
   <script type="text/javascript" src="//ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.js"></script>
   <script src="//cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
-  <link rel="stylesheet" href="{{ "/css/iiifserver.css" | absolute_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/iiifserver.css" | absolute_url }}">
